[project]
name = "bill-tracker"
version = "2.0.0"
description = "个人记账 Streamlit 应用（金账本）"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["bill_tracker", "scripts", "app.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"bill_tracker/ui/app.py" = ["E501"]
